--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -13,7 +13,7 @@
 }
 
 h1 {
-  color: #333;
+  color: #fff;
   margin-bottom: 1.5rem;
   width: 100%;
   text-align: center;
@@ -22,7 +22,7 @@ h1 {
 .board {
   display: flex;
   flex-direction: column;
-  background-color: #2a9d4e; /* Green board */
+  background-color: #321A2C; /* Purple board */
   border-radius: 10px;
   padding: 10px;
   margin: 0 auto 1rem auto;
@@ -55,7 +55,7 @@ h1 {
   width: 80%;
   height: 80%;
   border-radius: 50%;
-  background-color: #1e7a3b; /* Darker green for the holes */
+  background-color: #1A0312; /* Darker purple for the holes */
 }
 
 .token {
@@ -70,12 +70,12 @@ h1 {
 }
 
 .player1 {
-  background-color: #ff3b3b; /* Red */
+  background-color: #D239E1; /* Pink */
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .player2 {
-  background-color: #3b83ff; /* Blue */
+  background-color: #ED6F59; /* Orange */
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -112,17 +112,18 @@ h1 {
 }
 
 .status {
-  margin-top: 1.5rem;
+  margin: 1.5rem 0;
   padding: 0.75rem;
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 1rem;
   color: #333;
   border-radius: 8px;
-  background-color: #f5f5f5;
+  background-color: #321A2C;
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
   transition: all 0.3s ease;
+  color: #fff;
+  width: 100%;
 }
 
 .status p {
@@ -132,8 +133,8 @@ h1 {
 .resetButton {
   margin-top: 1.5rem;
   padding: 0.75rem 1.5rem;
-  background-color: #2a9d4e;
-  color: white;
+  background-color: #9BFCDA;
+  color: #1A0312;
   border: none;
   border-radius: 8px;
   font-size: 1rem;
@@ -145,7 +146,7 @@ h1 {
 }
 
 .resetButton:hover {
-  background-color: #238a42;
+  background-color: #45BC8F;
 }
 
 .gameContainer {
