--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -22,7 +22,7 @@ h1 {
 .board {
   display: flex;
   flex-direction: column;
-  background-color: #321A2C; /* Purple board */
+  background-color: #321a2c; /* Purple board */
   border-radius: 10px;
   padding: 10px;
   margin: 0 auto 1rem auto;
@@ -55,7 +55,7 @@ h1 {
   width: 80%;
   height: 80%;
   border-radius: 50%;
-  background-color: #1A0312; /* Darker purple for the holes */
+  background-color: #1a0312; /* Darker purple for the holes */
 }
 
 .token {
@@ -70,12 +70,12 @@ h1 {
 }
 
 .player1 {
-  background-color: #D239E1; /* Pink */
+  background-color: #d239e1; /* Pink */
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .player2 {
-  background-color: #ED6F59; /* Orange */
+  background-color: #ed6f59; /* Orange */
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -117,7 +117,7 @@ h1 {
   font-size: 1rem;
   color: #333;
   border-radius: 8px;
-  background-color: #321A2C;
+  background-color: #321a2c;
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
@@ -133,8 +133,8 @@ h1 {
 .resetButton {
   margin-top: 1.5rem;
   padding: 0.75rem 1.5rem;
-  background-color: #9BFCDA;
-  color: #1A0312;
+  background-color: #9bfcda;
+  color: #1a0312;
   border: none;
   border-radius: 8px;
   font-size: 1rem;
@@ -146,7 +146,7 @@ h1 {
 }
 
 .resetButton:hover {
-  background-color: #45BC8F;
+  background-color: #45bc8f;
 }
 
 .gameContainer {
