--- a/frontend/src/PlayerSelection.module.css
+++ b/frontend/src/PlayerSelection.module.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #1A0312;
+  background-color: #1a0312;
 }
 
 .container {
@@ -18,7 +18,7 @@ h1 {
 }
 
 .selectionCard {
-  background-color: #321A2C;
+  background-color: #321a2c;
   border-radius: 10px;
   padding: 2rem;
   width: 100%;
@@ -37,12 +37,12 @@ h3 {
   margin-bottom: 0.75rem;
 }
 
-.modeSelection {  
+.modeSelection {
   margin-bottom: 2rem;
 }
 
 .modeButtons {
-  display: flex;  
+  display: flex;
   gap: 1.5rem;
   justify-content: center;
 }
@@ -50,9 +50,9 @@ h3 {
 .modeButtons button {
   padding: 0.75rem 1.5rem;
   width: 100%;
-  border: 2px solid #9BFCDA;
-  background-color: #321A2C;
-  color: #9BFCDA;
+  border: 2px solid #9bfcda;
+  background-color: #321a2c;
+  color: #9bfcda;
   border-radius: 8px;
   font-size: 1rem;
   font-weight: bold;
@@ -61,12 +61,12 @@ h3 {
 }
 
 .modeButtons button:hover {
-  background-color: #1A0312;
+  background-color: #1a0312;
 }
 
 .modeButtons button.selectedMode {
-  background-color: #9BFCDA;
-  color: #321A2C;
+  background-color: #9bfcda;
+  color: #321a2c;
 }
 
 .playerSelection {
@@ -79,7 +79,7 @@ h3 {
 .playerConfig {
   padding: 1rem;
   border-radius: 8px;
-  background-color: #46363F;
+  background-color: #46363f;
 }
 
 .playerConfig h3 {
@@ -105,8 +105,8 @@ select {
   display: block;
   width: 100%;
   padding: 1rem;
-  background-color: #9BFCDA;
-  color: #321A2C;
+  background-color: #9bfcda;
+  color: #321a2c;
   border: none;
   border-radius: 8px;
   font-size: 1.1rem;
@@ -116,7 +116,7 @@ select {
 }
 
 .startButton:hover {
-  background-color: #9BFCDA;
+  background-color: #9bfcda;
 }
 
 .errorMessage {
