feat: use more complex select component

--- a/frontend/src/PlayerSelection.module.css
+++ b/frontend/src/PlayerSelection.module.css
@@ -286,3 +286,10 @@ select {
     font-size: 0.9rem;
   }
 }
+.humanPlayer {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+}
