--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -240,14 +240,14 @@ a.link:hover {
 .winnerMessagePink {
   animation: winPulse 1.5s infinite ease-in-out;
   background-color: #ef52f1;
-  border: 4px solid #E520E9;
+  border: 4px solid #e520e9;
   color: #1a0312;
 }
 
 .winnerMessageOrange {
   animation: winPulse 1.5s infinite ease-in-out;
   background-color: #ff8b7b;
-  border: 4px solid #FF6550;
+  border: 4px solid #ff6550;
   color: #1a0312;
 }
 
