--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
