--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,15 +1,12 @@
 .App {
   text-align: center;
-  padding: 1rem;
-  max-width: 100%;
-  margin: 0 auto;
-  box-sizing: border-box;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow-x: hidden;
-  width: 100%;
+  color: white;
 }
 
 h1 {
@@ -212,7 +209,7 @@ a.link:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
 }
 
