--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@ body,
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
 }
@@ -18,9 +19,11 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: #1a0312; /* Dark purple background */
   min-height: 100vh;
   max-width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
